fix buttons and textbox positioning on safari

--- a/app/styles/_textboxes.scss
+++ b/app/styles/_textboxes.scss
@@ -1,6 +1,7 @@
 .textbox {
   width: 100%;
   padding: 13px 25px;
+  margin: 0;
   color: $font-color--dark;
   font-family: 'Rubik';
   font-size: 1rem;
